src/objects/Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Plannings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Invoiced_Total__c</fullName>
        <label>Annual Invoiced Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Margin__c</fullName>
        <label>Annual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Paid_Total__c</fullName>
        <label>Annual Paid Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Expectation__c</fullName>
        <label>Current FY Expectation</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop off</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_FY_Revenue_Target__c</fullName>
        <label>Current FY Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <formula>TEXT(Account__r.Current_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_Opportunities__c</fullName>
        <label>Easy Opportunities</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Revenue_Remaining_to_Target__c</fullName>
        <formula>Current_FY_Revenue_Target__c - Account__r.Total_Invoiced_This_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Remaining to Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Opportunities__c</fullName>
        <label>Stretch Opportunities</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Year_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  NOT(ISNUMBER(Year__c)),
  AND(
    ISNUMBER(Year__c),
    LEN(Year__c) &lt;&gt; 4
  )
)</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Please enter only a 4 digit Year</errorMessage>
    </validationRules>
</CustomObject>